--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     </head>
     <body>
 
-        <header>
-            <h1>Weather Dashboard</h1> 
+        <header class="row navbar navbar-dark bg-primary">
+            <div class="continer-fluid">
+                <div class="col-12 text-center">
+                    <h1 class="navbar-brand fs-1">Weather Dashboard</h1> 
+                </div>
+            </div>
         </header>
 
         <aside>
@@ -44,6 +48,7 @@
         </aside>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <script src="assets/script.js"></script>
     </body>
