--- a/index.html
+++ b/index.html
@@ -17,35 +17,45 @@
             </div>
         </header>
 
-        <aside>
-            <h2>Search for a City</h2>
-            <form>
-                <input type="text" id="search-city" placeholder="San Diego">
-                <input type="submit" value="Search">
-            </form>
-            <br>
-            <div class="card">
-                <ul class="search-history">
+        <div class="container">
+            <div class="row">
+                <div class="col-4 bg-light">
+                    <h2>Search for a City</h2>
+                    <form>
+                        <input type="text" id="search-city" placeholder="San Diego">
+                        <input type="submit" value="Search">
+                    </form>
+                    <br>
+                    <div class="card">
+                        <ul id="search-history">
 
-                </ul>
+                        </ul>
+                    </div>
+                </div>
+            
+                <div class="col-8">
+                    <div class="row mr-0">
+                        <div class="col-12 border border-secondary m-3">
+                            <div class="row">
+                                <div class="col-12">
+                                    <div id="weather-conditons">
+                                        <h2 id="current-city" class="current-city align-middle"></h2>
+                                        <p>Temp: <span id="current-temp"></span></p>
+                                        <p>Wind: <span id="current-wind"></span></p>
+                                        <p>Humidity: <span id="current-humidity"></span></p>
+                                        <p>UV Index <span id="current-uv"></span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
+                    <div id="five-day-forecast">
+                        <h3>5-Day Forecast:</h3>
+                    </div>
+                </div>
             </div>
-
-            <main>
-                <div id="weather-conditons">
-                    <h2 id="current-city"></h2>
-                    <p>Temp: <span id="current-temp"></span></p>
-                    <p>Wind: <span id="current-wind"></span></p>
-                    <p>Humidity: <span id="current-humidity"></span></p>
-                    <p>UV Index <span id="current-uv"></span></p>
-                </div>
-                <br>
-                <div id="five-day-forecast">
-                    <h3>5-Day Forecast:</h3>
-                    
-
-                </div>
-            </main>
-        </aside>
+        </div>
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
