--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <h2>Search for a City</h2>
                     <form>
                         <input type="text" id="search-city" placeholder="San Diego">
-                        <input type="submit" value="Search">
+                        <input type="submit" value="Search" id="search-btn">
                     </form>
                     <br>
                     <div class="card">
@@ -40,7 +40,7 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div id="weather-conditons">
-                                        <h2 id="current-city" class="current-city align-middle"></h2>
+                                        <h2 id="current-city" class="current-city align-middle"><span id="current-time"></span></h2>
                                         <p>Temp: <span id="current-temp"></span></p>
                                         <p>Wind: <span id="current-wind"></span></p>
                                         <p>Humidity: <span id="current-humidity"></span></p>
