--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     <h2>Search for a City</h2>
                     <form>
                         <input type="text" id="search-city" placeholder="San Diego">
-                        <input type="submit" value="Search" id="search-btn">
+                        <button class="btn btn-outline-primary my-2" style="width: 100%" type="submit" value="Search" id="search-btn">Search</button>
                     </form>
                     <br>
                     <div class="card">
-                        <ul id="search-history">
+                        <ul id="history">
 
                         </ul>
                     </div>
@@ -40,19 +40,18 @@
                             <div class="row">
                                 <div class="col-12">
                                     <div id="weather-conditons">
-                                        <h2 id="current-city" class="current-city align-middle"><span id="current-time"></span></h2>
-                                        <p>Temp: <span id="current-temp"></span></p>
-                                        <p>Wind: <span id="current-wind"></span></p>
-                                        <p>Humidity: <span id="current-humidity"></span></p>
-                                        <p>UV Index <span id="current-uv"></span></p>
+                                        
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <br>
-                    <div id="five-day-forecast">
+                    <div class="row">
                         <h3>5-Day Forecast:</h3>
+                    </div>
+                    <div class="row">
+                        <div id="forecast"></div>
                     </div>
                 </div>
             </div>
